[package]
name = "k2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Flat file system library. Work in progress."
repository = "https://github.com/narzantaria/k2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
